Realization of collections ArrayList